cluster/home/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-web-svc
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
    - name: http
      targetPort: 3000
      port: 80
