cluster/home/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.local.cjsolsen.com`)
      kind: Rule
      services:
        - name: homepage-web-svc
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: homepage-cjsolsen-com-tls
